--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,299 @@
-.App {
-  text-align: center;
+body {
+  font-family: Roboto, Helvetica, Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.centered2{
+   
+    justify-content: center;
+    align-items: default  ;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.centered1{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center  ;
+}
+.centered3{
+  display: flex;
+  justify-content: center;
+  align-items: center  ;
+}
+.layout{
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 2fr 5fr 3fr 2fr 2fr 2fr 1fr ;
+    grid-template-areas: 'content1'
+                         'content2'
+                         'content3'
+                         'content4'
+                         'content5'
+                         'content6'
+                         'content7';
+                         
+}
+.content1{
+  height: 100px;
+  grid-area: content1;
+  background-color: rgb(3,104,161);
+}
+.content2{
+    grid-area: content2;
+    text-decoration-color: black;
+    background-color: rgb(252, 252, 252);
+
+    height: 500px;
+    padding-right: 0px;
+    margin-top: 0;
+    padding-left: 0;
+    border-radius: 25px;
+  
+    justify-content: center;
+    box-shadow: 5px 5px 5px 0px  #3f5ba9;
+    background: #fff;
+    
+    
+    overflow: hidden;
+    
+    animation: open .5s;
+}
+.content3{
+    height: 500px;
+    grid-area: content3;
+    background-color: rgb(232, 237, 236);
 }
 
-.App-link {
-  color: #61dafb;
+
+@media only screen and (min-width: 768px){
+    .layout{
+        width: 100%;
+        border-width: 3px;
+        border-color: blueviolet;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 2fr 5fr 2fr 2fr 2fr 2fr 1fr ;
+        grid-template-areas: 'content1 content1 content1 content1'
+                             'content3 content2 content2 content2';
+                             
+    }
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#card-header{
+  color: #000;
 }
+.container{
+    
+    margin: 20px;
+}
+  
+
+.content {
+    margin: 50px 0;
+}
+  
+.preview {
+    max-width: 300px;
+    max-height: 150px;
+}
+
+body{
+    font-family: 'Hind Guntur', sans-serif;
+    color: rgb(3,104,161);
+    display: flex;
+    justify-content: center;
+    background: #778ed2;
+    
+    
+    background-repeat: no-repeat, no-repeat;
+    background-position:  200% -40%;
+    background-size: 80%;
+    
+  }
+  
+  .card{
+   
+    height: 500px;
+    padding-right: 0px;
+    margin-top: 0;
+    padding-left: 0;
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    box-shadow: 5px 5px 5px 0px  #3f5ba9;
+    background: #fff;
+    
+    
+    overflow: hidden;
+    
+    animation: open .5s;
+  }
+  @keyframes open {
+    0%  {background-position: 166% 5%, 220% 69%;}
+    50%{background-position: 120% -5%, 200% -40%;}
+  }
+  form{
+    display: flex;
+    float: left;
+    
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: fit-content;
+  }
+  
+  .field{
+    
+    display: flex;
+    flex-direction: column;
+    }
+  input[type="file"] {
+    display: none;
+  }
+  
+  .custom-file-upload {
+    border-radius: 75%;
+    
+    
+    padding: 6px;
+    cursor: pointer;
+    background: linear-gradient(#8fb0e7, rgb(7, 113, 179));
+    margin-bottom: 2px;
+  }
+  
+  .img-wrap{
+    position: relative;
+    width: 200px;
+    height: 210px;
+    overflow: hidden;
+    border-radius: 75%;
+  }
+  .img-upload:before{
+   
+    font-size: 40px;
+    position: relative;
+    padding-top: 80px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: rgb(3,104,161);
+    height: 200px;
+    border-radius: 75%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #fff;
+  }
+  .img-upload:hover:before{
+   opacity: 1;
+  }
+  img {
+    width: 100%;
+    height: 100%;
+  }
+  
+  label{
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #676767;
+  }
+  
+  input{
+    border-radius: 15px;
+    border: 1px solid #b7b7b7;
+    padding: 0px 0px 0px 0px;
+    font-size: 15px;
+    transition: 0.2s;
+  }
+  input:focus{
+    outline: none;
+    border: solid rgb(3,104,161);
+  }
+  input::placeholder{
+    color: #bebebe;
+  }
+  .name{ 
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #676767;
+    max-width: 220px;
+    
+  }
+  .status{
+    text-align: center;
+    max-width: 220px;
+    
+  }
+  button{
+    outline: none;
+   
+    color: #4d4f50;
+    font-weight: 700;
+    
+    width: 180px;
+    font-size: 18px;
+    left: 0px;
+    text-align: center;
+    transition: 0.5s;
+    border-radius: 10px;
+    cursor: pointer;
+    border-radius: 25px;
+    border: none;
+    background: rgb(4, 156, 244);
+  }
+  .save{
+    font-weight: 600;
+    left: 0px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    width: 180px;
+    box-shadow: 20px 0px 40px 0px  #09bbdb;
+    appearance: none;
+  }
+  .edit{
+    color: #fff;
+    width: 180px;
+  }
+  button:hover{
+    left: 0;
+    color: #fff;
+    width: 180px;
+    box-shadow: 0px 0px 20px 0px  #09bbdb;
+  }
+  button:focus{
+    outline: none;
+  }
+  .lds-ripple {
+    display: inline-block;
+    position: relative;
+    width: 64px;
+    height: 64px;
+  }
+  .lds-ripple div {
+    position: absolute;
+    border: 4px solid #fff;
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+  .lds-ripple div:nth-child(2) {
+    animation-delay: -0.5s;
+  }
+  
+  
+  .fa-instagram{
+    position: absolute;
+    color: rgb(3,104,161);
+    top: 3%;
+    right: 2%;
+    font-size: 38px;
+  }
+  .fa-instagram:hover{
+    font-size: 42px;
+    color: rgb(3,104,161);
+    transition: all .1s linear;
+    cursor: pointer;
+  }
+  
+  
